--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta property="og:description" content="Tyler M. Neher's weight charter over a two and one-half year period." />
   <meta property="og:image" content="https://weight-date.tylermneher.me/weight-date-chart-image.png" />
   <meta property="og:image:type" content="image/png" />
+  <title>Weight Date Chart</title>
 
 </head>
 
