--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       gtag('config', 'G-VF91DKW31J');
     </script>
   <meta property="og:title" content="Weight Date Chart" />
-  <meta property="og:description" content="Tyler M. Neher's weight charter over a two and one-half year period." />
+  <meta property="og:description" content="Tyler M. Neher's weight charted over a two and one-half year period." />
   <meta property="og:image" content="https://weight-date.tylermneher.me/weight-date-chart-image.png" />
   <meta property="og:image:type" content="image/png" />
   <title>Weight Date Chart</title>
